@@ -624,6 +624,7 @@ int		i2d_ASN1_GENERALIZEDTIME();
 ASN1_GENERALIZEDTIME *	d2i_ASN1_GENERALIZEDTIME();
 int		i2d_ASN1_TIME();
 ASN1_TIME *	d2i_ASN1_TIME();
+ASN1_TIME *ASN1_TIME_set();
 int		i2d_ASN1_SET();
 STACK *		d2i_ASN1_SET();
 int a2d_ASN1_OBJECT();
