@@ -290,6 +290,11 @@ void GENERAL_NAME_free();
 STACK *i2v_GENERAL_NAME();
 GENERAL_NAME *v2i_GENERAL_NAME();
 
+int i2d_AUTHORITY_KEYID();
+AUTHORITY_KEYID *d2i_AUTHORITY_KEYID();
+AUTHORITY_KEYID *AUTHORITY_KEYID_new();
+void AUTHORITY_KEYID_free();
+
 int i2d_PKEY_USAGE_PERIOD();
 PKEY_USAGE_PERIOD *d2i_PKEY_USAGE_PERIOD();
 PKEY_USAGE_PERIOD *PKEY_USAGE_PERIOD_new();
